--- a/Reponsive Web/404-not-found-master/01/index.css
+++ b/Reponsive Web/404-not-found-master/01/index.css
@@ -1,8 +1,23 @@
+@font-face {
+    font-family: SpaceMono;
+    src: url(SpaceMono-Regular.ttf);
+}
+
+@font-face {
+    font-family: SpacMono-Bold;
+    src: url(SpaceMono-Bold.ttf);
+}
+
+@font-face {
+    font-family: SpaceMono-Italic;
+    src: url(SpaceMono-Italic.ttf);
+}
 body {
     height: 100vh;
     width: 100%;
     padding: 0;
     margin: 0;
+    font-family: SpaceMono;
 }
 .container {
     width: 100%;
@@ -32,12 +47,32 @@ body {
     height: 60%;
 }
 .text-first {
-    font-size: 48px;
+    height: 190px;
+    width: 586px;
+}
+.badNews {
+    font-size: 55px;
     color: #333333;
+    font-family: SpacMono-Bold;
+    font-weight: 700;
+}
+.text-second {
+    height: 108px;
+    width: 385px;
+}
+.text-seconds {
+    font-size: 24px;
+    font-weight: 400;
+    color: #4f4f4f;
 }
 .btn-back {
-    height: 21px;
-    width: 130px;
-    left: 67px;
-    top: 750px;
+    margin-top: 64px;
+    width: 216px;
+    height: 68px;
+    background-color: #333333;
+    color: white;
+    font-family: SpaceMono;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20.73px;
 }
