--- a/Reponsive Web/404-not-found-master/01/index.css
+++ b/Reponsive Web/404-not-found-master/01/index.css
@@ -17,7 +17,7 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
-    font-family: SpaceMono;
+    font-family: space;
 }
 .container {
     width: 100%;
