--- a/Reponsive Web/Interior Consultant/interior-consultant-master/Style/main.css
+++ b/Reponsive Web/Interior Consultant/interior-consultant-master/Style/main.css
@@ -1,3 +1,4 @@
+@import url(base.css);
 body {
     height: 100vh;
     width: 100%;
@@ -11,33 +12,140 @@ header {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding-left: 85px;
-    padding-right: 76px;
     padding-top: 50px;
+    padding-left: 77px;
+    padding-right: 76px;
 }
 .title {
     padding: 8px;
     border: 1px solid #ffffff;
 }
-.Interior {
+.interior {
     padding: none;
-    padding: 8px;
     color: #ffffff;
     font-size: 14px;
     font-weight: 200;
+    line-height: 16px;
+    font-family: CrimsonPro;
 }
 .menu {
     display: flex;
     flex-wrap: wrap;
 }
 a {
-    padding-left: 43px;
+    padding-left: 86px;
     color: #ffffff;
     text-decoration: none;
     font-size: 18px;
     font-weight: 700px;
-    font-family: "Montserrat";
+    font-family: Montserrat;
 }
-span:hover{
+span:hover {
     border-bottom: 1px solid #ffffff;
+}
+
+/* main */
+main {
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 77px;
+    margin-right: 77px;
+    padding-top: 153px;
+}
+.info {
+}
+.title-content {
+    font-size: 48px;
+    font-weight: 500;
+    font-family: Lora;
+    line-height: 62px;
+    color: #ffffff;
+    height: 61px;
+    width: 365px;
+    padding-bottom: 40px;
+}
+.contents {
+    width: 410px;
+    height: 145px;
+    padding-bottom: 50px;
+}
+.contents-text {
+    font-size: 24px;
+    font-weight: 400;
+    font-family: Montserrat;
+    line-height: 30px;
+    color: #ffffff;
+}
+.readmore {
+    font-size: 18px;
+    font-weight: 700;
+    font-family: Montserrat;
+    color: #ffffff;
+}
+
+.background {
+    height: 587px;
+    width: 821px;
+}
+
+.info-person {
+    background-color: #181719;
+    width: 410px;
+    height: 189px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: absolute;
+    top: 745px;
+    right: 109px;
+}
+.person {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    padding-left: 26px;
+}
+.avata {
+    height: 72px;
+    width: 72px;
+    border-radius: 50%;
+}
+.des {
+    padding-left: 15px;
+}
+.name {
+    font-size: 14px;
+    font-weight: 500;
+    font-family: Montserrat;
+    color: #ffffff;
+    padding-bottom: 8px;
+}
+.job {
+    font-size: 12px;
+    font-weight: 500;
+    font-family: Montserrat;
+    color: #828282;
+}
+
+.describe {
+    height: 62px;
+    width: 287px;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: Lora;
+    color: #ffffff;
+    padding-left: 26px;
+}
+/* footer */
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
+    color: #a9a9a9;
+    font-family: Montserrat;
+    padding-top: 230px;
 }
