--- a/Reponsive Web/Edie homepage/edie-homepage-master/Style/main.css
+++ b/Reponsive Web/Edie homepage/edie-homepage-master/Style/main.css
@@ -19,7 +19,7 @@ header {
     font-weight: 800;
     font-family: Heebo;
 }
-a {
+.a-menu {
     font-size: 24px;
     font-weight: 500;
     font-family: Poppins;
@@ -96,7 +96,7 @@ input::placeholder {
     font-family: Poppins;
     color: #bdbdbd;
 }
-button {
+.btn-join {
     height: 49px;
     width: 94px;
     border-radius: 12px;
@@ -120,11 +120,15 @@ main {
     margin-left: 165px;
 }
 .option {
+    padding-left: 165px;
+    display: flex;
+    align-items: center;
+    padding-bottom: 194px;
 }
 .UX {
     width: 341px;
     height: 422px;
-    border: 1px solid #2d9cdb;
+    margin-left: 74px;
 }
 .logo {
     height: 67px;
@@ -134,6 +138,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 46px 0 35px 34px;
 }
 .icon {
     height: 27px;
@@ -144,6 +149,7 @@ main {
     font-size: 24px;
     font-weight: 700;
     font-family: Poppins;
+    margin: 0 0 24px 34px;
 }
 .logo-des {
     width: 273px;
@@ -151,4 +157,214 @@ main {
     font-size: 18px;
     font-weight: 400;
     font-family: Poppins;
+    margin: 0 0 24px 34px;
+}
+.btn-option {
+    background-color: #e0e0e0;
+    height: 42px;
+    width: 116px;
+    border-radius: 12px;
+    color: #828282;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Poppins;
+    line-height: 24px;
+    outline: none;
+    border: none;
+    margin: 30px 0 46px 34px;
+}
+.FE {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 24px;
+}
+.logo-fe {
+    background-color: #27ae60;
+}
+.btn-fe {
+    background-color: #2d9cdb;
+    color: #fff;
+}
+.logo-be {
+    background-color: #eb5757;
+}
+.design {
+    padding-left: 165px;
+}
+.desgin-title {
+    font-size: 36px;
+    font-weight: 500;
+    font-family: Poppins;
+    color: #333333;
+    height: 108px;
+    width: 448px;
+    padding-bottom: 188px;
+}
+.desgin-banner {
+    max-width: calc(100% - 333px);
+    padding-left: 20px;
+}
+.banner-img {
+    height: 545px;
+    width: 545px;
+    border-radius: 12px;
+}
+.banner-job {
+    font-size: 14px;
+    font-weight: 300;
+    font-family: Poppins;
+    padding-top: 20px;
+}
+.banner-name {
+    font-size: 24px;
+    font-weight: 500;
+    font-family: Poppins;
+}
+.desgin-top {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.onboard {
+    transform: translateY(-176px);
+}
+.second {
+    padding-top: 120px;
+    padding-bottom: 220px;
+}
+.laidback {
+    width: calc(100% - 340px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 170px;
+}
+.laiback-title {
+    font-size: 18px;
+    font-weight: 500;
+    font-family: Poppins;
+    color: #eb5757;
+}
+.laiback-content {
+    width: 280px;
+    font-size: 36px;
+    font-weight: 500;
+    font-family: Poppins;
+}
+.Lorem {
+    width: 273px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Poppins;
+    line-height: 24px;
+}
+.person {
+    display: flex;
+    align-items: center;
+}
+.person3 {
+    height: 320px;
+    width: 320px;
+    border-radius: 24px;
+    margin-right: 24px;
+}
+.person1 {
+    height: 260px;
+    width: 260px;
+    border-radius: 24px;
+    margin-bottom: 24px;
+}
+.person2 {
+    height: 300px;
+    width: 300px;
+    border-radius: 24px;
+}
+.img-col {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.outstanding {
+    width: 937px;
+    font-size: 36px;
+    font-weight: 500;
+    font-family: Poppins;
+    padding: 200px 0 36px 170px;
+}
+.carlos {
+    display: flex;
+    align-items: center;
+    padding: 0 0 203px 170px;
+}
+.person4 {
+    height: 82px;
+    width: 82px;
+    border-radius: 12px;
+    margin-right: 30px;
+}
+.carlos-name {
+    font-size: 24px;
+    font-weight: 500;
+    font-family: Poppins;
+    padding-bottom: 12px;
+}
+.carlos-job {
+    font-size: 18px;
+    font-weight: 500;
+    font-family: Poppins;
+    color: #828282;
+}
+footer {
+    height: 385px;
+    background-color: #100e1d;
+    display: flex;
+    padding: 0 137px 0 170px;
+    justify-content: space-between;
+}
+.footer-menu {
+    display: flex;
+    flex-direction: column;
+    padding-top: 46px;
+}
+.a-footer {
+    font-size: 18px;
+    font-weight: 400;
+    font-family: Poppins;
+    line-height: 36px;
+    color: #fff;
+    text-decoration: none;
+}
+.footer-logo {
+    padding-top: 46px;
+}
+.footer-title {
+    font-size: 36px;
+    font-weight: 800;
+    font-family: Heebo;
+    color: #fff;
+}
+.logo-icon {
+    height: 24px;
+    width: 24px;
+    color: #f2f2f2;
+    margin-right: 11px;
+}
+.footer-input {
+    display: flex;
+    flex-direction: column;
+    padding-top: 46px;
+    position: relative;
+}
+.input-title {
+    color: #f2f2f2;
+}
+.footer-btn {
+    height: 49px;
+    width: 94px;
+    border-radius: 12px;
+    background-color: #2d9cdb;
+    outline: none;
+    border: none;
+    position: absolute;
+    top: 72px;
+    left: 251px;
 }
